white space fix

--- a/pages/styles.css
+++ b/pages/styles.css
@@ -4,7 +4,7 @@ body {
   padding: 0;
   background-color: #f4f6f9;
   color: #333;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 a.link-nice {
